--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(244,244,244);
+  background-color: rgb(244, 244, 244);
   color: #333;
 }
 
@@ -23,17 +23,17 @@ small {
 
 .container {
   margin: 0 auto;
-  max-width:1000px;
+  max-width: 1000px;
   padding: 40px;
 }
 
 .title {
   font-size: 4.4rem;
-  text-align: center
+  text-align: center;
 }
 
 .form {
-  display:grid;
+  display: grid;
 }
 
 .label {
@@ -52,10 +52,10 @@ small {
 }
 
 .button {
-  background-color: rgba(0,0,0,0.75);
+  background-color: rgba(0, 0, 0, 0.75);
   color: white;
   padding: 1rem 2rem;
-  border: 1px solid rgba(0,0,0,0.75);
+  border: 1px solid rgba(0, 0, 0, 0.75);
   border-radius: 20px;
   font-size: 1.4rem;
   cursor: pointer;
@@ -63,18 +63,23 @@ small {
 }
 
 .button:hover {
-  background-color: rgba(0,0,0,0.85);
+  background-color: rgba(0, 0, 0, 0.85);
 }
 
-@media (min-width:786px){
+.error {
+  color: red;
+  margin-top: 10px;
+}
+
+@media (min-width: 786px) {
   .form {
-      grid-template-columns: auto 1fr auto;
-      grid-gap: 1rem;
-      align-items: center;
+    grid-template-columns: auto 1fr auto;
+    grid-gap: 1rem;
+    align-items: center;
   }
-  
+
   .input {
-      margin-bottom: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -85,7 +90,7 @@ small {
 .card {
   padding: 2rem 4rem;
   border-radius: 10px;
-  box-shadow: 1px 1px 5px rgba(0,0,0,0.25);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
   margin-bottom: 2rem;
   background-color: white;
 }
@@ -97,5 +102,6 @@ small {
 
 .card--image {
   margin: 0 auto;
-  display: block
+  display: block;
 }
+
